# S.A.G.E

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  project_structure.md  pyproject.toml  setup.py  startup.ps1  startup.sh
docs/: ARCHITECTURE_STATUS.md  CLI.md  INSTALL.md  README.md  getting_started.md
images/: Commands  Memory  Model  SAGE  Skills
scripts/: train_routing_policy.py
src/: main.py
src/sage/: debug_mode_log.py
src/sage/agents/: architect.py  coder.py  debugger.py  planner.py  reviewer.py
src/sage/benchmarks/: runner.py
src/sage/cli/: chat_ui.py  doc_links.py  main.py  permissions_cmd.py  rules_cmd.py  run_cmd.py  run_output.py  shell_chat.py  shell_intent.py  shell_nl.py  shell_support.py  workspace_init.py
src/sage/codebase/: code_index.py  context_builder.py
src/sage/execution/: executor.py  verifier.py
src/sage/llm/: embeddings.py  ollama_safe.py
src/sage/memory/: digest.py  docs_rag_retriever.py  manager.py  rag_retriever.py
src/sage/observability/: run_metrics.py
src/sage/orchestrator/: checkpoints.py  intelligence_feed.py  prefix_builder.py  (+1 more)
tests/: test_app.py  test_chat_session_store_unit.py  test_debugger_normalise_unit.py  test_documentation_planner_unit.py  test_llm_parse.py  test_planner_dedupe_unit.py  test_planner_json_fallback_unit.py  test_reviewer_goal_alignment_unit.py  test_run_metrics_schema.py  test_run_report_unit.py  test_shell_intent_unit.py  test_verification_gate_workspace_unit.py  test_verifier_policy_unit.py  test_workspace_init_unit.py
tests/e2e/: test_greenfield_pipeline_mocked.py
(+4 files in other folders)
