[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "0.1.0"
description = "Self-improving Autonomous Generation Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3.20",
    "ollama>=0.3",
    "anthropic>=0.40",
    "openai>=1.59",
    "pydantic>=2.10",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12",
    "rich>=13.9",
    "prompt_toolkit>=3.0.50",
    "tree-sitter>=0.25.0",
    "tree-sitter-languages>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "scikit-learn>=1.5",
    "fastapi>=0.115",
    "httpx>=0.27",
]
rl = [
    "scikit-learn>=1.5",
]
tui = [
    "textual>=0.60",
]

[project.scripts]
sage = "sage.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sage = ["assets/skills/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/sage/assets/skills"]

[tool.mypy]
python_version = "3.10"
strict = false
